# evopt

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  app.py  fly.toml  go.mod  go.sum  locustfile.py  main.py  openapi.yaml  optimizer.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
client/: client.gen.go
cmd/: client.go
example/: client.go
src/evopt/: app.py  optimizer.py  settings.py
test_cases/: 009-discharge-before-import.json  010-infesible-charge-goal.json  011-infeasible-charge-demand.json  012-early-charging-not-perfect.json  013-grid-export-limit-hit.json  014-grid-import-limit-violation.json
tests/: test_app.py
tests/examples/: scenario_1.json  scenario_2.json
tools/: cfg.yaml  generate.go
