[project]
name = "evopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "andig", email = "andi@evcc.io" }, { name = "ekke" }]
requires-python = "~=3.13.0"
dependencies = [
    "flask>=3.0.3",
    "flask-restx>=1.3.0",
    "gunicorn>=22.0.0",
    "numpy>=2.3.1",
    "pulp>=3.2.2",
    "pyjwt>=2.8.0",
    "werkzeug>=3.0.3",
]

[project.scripts]
evopt = "evopt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.12.12"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["F", "I", "E", "W", "PL"]
ignore = ["PLR0912", "PLR0913", "PLR2004"]
